@@ -1,5 +1,9 @@
 Version 2.0
   * LWB: Fixed a bug where the view menu would occasionally show the wrong icon for a net.
+  * LWB: Fixed a bug where the path of plugin icons was absolute, stopping
+         plugin task icons from working on machines where the plugin path is different.
+  * LWB: Upgraded to latest engine, fixing a bug that was causing ouput and enablement parameters
+    to be interleaved in the engine specification, causing engine runtime errors.
 
 Version 1.5.1 (08/10/2007)
   * LWB: Fixed a bug where multiple-instance tasks were not being initialsed properly and consequently
